# mockaroo-python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  client.py  pyproject.toml  requirements.txt  test.csv  tox.ini
.github/workflows/: continuous_integration.yml
mockaroo/: __init__.py  __main__.py  cli.py  client.py  constants.py  exceptions.py
mockaroo/api/: client.py  constants.py
mockaroo/cli/: commands.py  layout.py
src/mockaroo/: client.py  layout.py
tests/: test_cli.py  test_client.py  test_layout.py
