[tool.poetry]
name = "mockaroo-python"
version = "3.0.0"
description = "A Python wrapper for the Mockaroo API"
authors = ["Scott Carvalho <scottcarvalho71@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "mockaroo"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"
rich = "^13.7.1"
rich-click = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mockaroo = 'mockaroo.cli:cli'