[project]
name = "mockaroo-python"
version = "3.0.0"
description = "A Python wrapper for the Mockaroo API"
authors = [{ name = "Scott Carvalho", email = "scottcarvalho71@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.31.0,<3",
    "python-dotenv>=1.0.1,<2",
    "click>=8.1.7,<9",
    "rich>=13.7.1,<14",
    "rich-click>=1.7.4,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "ruff>=0.12.11",
]

[tool.uv.build-backend]
module-name = "mockaroo"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"