[project]
name = "mockaroo-python"
version = "3.0.0"
description = "A Python wrapper for the Mockaroo API"
authors = [{ name = "Scott Carvalho", email = "scottcarvalho71@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests",
    "python-dotenv",
    "click",
    "rich",
    "rich-click",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.12.11",
]

[tool.uv.build-backend]
module-name = "mockaroo"

[project.scripts]
mockaroo = "mockaroo.cli:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"